# ComfyUI-HunyuanImage-2.1

./: .gitignore  README.md  README_CN.md  README_COMFYUI.md  TROUBLESHOOTING.md  __init__.py  download_fp8.py  install.py  model_manager.py  nodes.py  nodes_advanced.py  nodes_dual_encoder.py  nodes_modular.py  pyproject.toml  requirements.txt  setup.py
ckpts/: checkpoints-download.md
example_workflows/: README.md  hunyuan_advanced_workflow.json  hunyuan_basic_workflow.json  hunyuan_modular_basic_workflow.json
hyimage/: __init__.py
hyimage/common/: __init__.py  constants.py  format_prompt.py
hyimage/common/config/: __init__.py  base_config.py  lazy.py
hyimage/diffusion/: __init__.py  cfg_utils.py
hyimage/diffusion/pipelines/: hunyuanimage_pipeline.py  hunyuanimage_refiner_pipeline.py
hyimage/diffusion/schedulers/: __init__.py  flow_match.py
hyimage/models/: __init__.py  model_zoo.py
hyimage/models/dit/: __init__.py  hunyuanimage_v2_dit.py  hunyuanimage_v2_full_dit.py
hyimage/models/hunyuan/configs/: __init__.py  hunyuanimage_config.py
hyimage/models/hunyuan/modules/: embed_layers.py  flash_attn_no_pad.py  hunyuanimage_dit.py  mlp_layers.py  models.py  modulate_layers.py  norm_layers.py  posemb_layers.py  token_refiner.py
hyimage/models/hunyuan/utils/: helpers.py
hyimage/models/reprompt/: reprompt.py
hyimage/models/text_encoder/: __init__.py  byT5.py
hyimage/models/text_encoder/byT5/: __init__.py
hyimage/models/vae/: __init__.py  hunyuanimage_vae.py  refiner_vae.py
